Unify the comment style

--- a/docs-website/docs/overview/migrating-from-langgraphlangchain-to-haystack.mdx
+++ b/docs-website/docs/overview/migrating-from-langgraphlangchain-to-haystack.mdx
@@ -116,9 +116,9 @@ def divide(a: int, b: int) -> float:
 # Augment the LLM with tools
 tools = [add, multiply, divide]
 model = AnthropicChatGenerator(
-        model="claude-sonnet-4-5-20250929",
-        generation_kwargs={"temperature":0},
-        tools = tools
+    model="claude-sonnet-4-5-20250929",
+    generation_kwargs={"temperature":0},
+    tools=tools,
 )
 
 # Components
@@ -196,26 +196,32 @@ from langchain.chat_models import init_chat_model
 # Define tools
 @tool
 def multiply(a: int, b: int) -> int:
-    # Multiply \`a\` and \`b\`.
-    # Args:
-    #     a: First int
-    #     b: Second int
+    """Multiply \`a\` and \`b\`.
+
+    Args:
+        a: First int
+        b: Second int
+    """
     return a * b
 
 @tool
 def add(a: int, b: int) -> int:
-    # Adds \`a\` and \`b\`.
-    # Args:
-    #     a: First int
-    #     b: Second int
+    """Adds \`a\` and \`b\`.
+
+    Args:
+        a: First int
+        b: Second int
+    """
     return a + b
 
 @tool
 def divide(a: int, b: int) -> float:
-    # Divide \`a\` and \`b\`.
-    # Args:
-    #     a: First int
-    #     b: Second int
+    """Divide \`a\` and \`b\`.
+
+    Args:
+        a: First int
+        b: Second int
+    """
     return a / b
 
 # Augment the LLM with tools
