fix ip_network is not defined

--- a/docs-website/docs/pipeline-components/fetchers/linkcontentfetcher.mdx
+++ b/docs-website/docs/pipeline-components/fetchers/linkcontentfetcher.mdx
@@ -52,11 +52,11 @@ from urllib.parse import urlparse
 
 
 PRIVATE_RANGES = (
-    ip_network("127.0.0.0/8"),
-    ip_network("10.0.0.0/8"),
-    ip_network("172.16.0.0/12"),
-    ip_network("192.168.0.0/16"),
-    ip_network("169.254.0.0/16"),
+    ipaddress.ip_network("127.0.0.0/8"),
+    ipaddress.ip_network("10.0.0.0/8"),
+    ipaddress.ip_network("172.16.0.0/12"),
+    ipaddress.ip_network("192.168.0.0/16"),
+    ipaddress.ip_network("169.254.0.0/16"),
 )
 
 
