fixing Varcel errors

--- a/docs-website/docs/concepts/components/custom-components.mdx
+++ b/docs-website/docs/concepts/components/custom-components.mdx
@@ -34,7 +34,7 @@ def run(self, documents):
     return {"documents": updated}
 ```
 
-When you need to modify nested mutable structures (e.g. `list` or `dict` attributes) or update many fields of the dataclass instance, use a full deep copy instead:
+When you need to modify nested mutable structures, for example `list` or `dict` attributes, or update many fields of the dataclass instance, use a full deep copy instead:
 
 ```python
 import copy
@@ -46,7 +46,7 @@ def run(self, documents):
     return {"documents": documents_copy}
 ```
 
-When your inputs may contain pipeline-specific types (`Component`, `Tool`, or `Toolset`) or other non-copyable objects, use Haystack's [`_deepcopy_with_exceptions`](https://github.com/deepset-ai/haystack/blob/main/haystack/core/pipeline/utils.py) from `haystack.core.pipeline.utils` instead of `copy.deepcopy`. It recursively copies containers but leaves those types by reference and returns the original object on a copy failure logging the error.
+When your inputs may contain `Component`, `Tool`, or `Toolset` or other non-copyable objects, use Haystack's [`_deepcopy_with_exceptions`](https://github.com/deepset-ai/haystack/blob/main/haystack/core/pipeline/utils.py) from `haystack.core.pipeline.utils` instead of `copy.deepcopy`. It recursively copies containers but leaves those types by reference and returns the original object on a copy failure logging the error.
 :::
 
 
